[gd_scene load_steps=2 format=3 uid="uid://rl_menu_button"]

[ext_resource type="Script" path="res://scripts/ui/menu/rl_menu_button.gd" id="1"]

[node name="RLMenuButton" type="Control"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 280.0
offset_bottom = 50.0
mouse_filter = 0
script = ExtResource("1")

[node name="EdgeGlow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 4.0
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.6, 0.2, 0.6)

[node name="Highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.8, 1, 0.2)

[node name="MainLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -12.0
offset_right = 265.0
offset_bottom = 12.0
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "BUTTON"
vertical_alignment = 1
uppercase = true

[node name="SubtitleLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 8.0
offset_right = 265.0
offset_bottom = 24.0
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "subtitle"
vertical_alignment = 1
